// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendReviewModal > should render input in fiat correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px] w-[100%]"
  data-testid="send-review-modal"
>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] px-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          $1,000.00
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          100.00 DAI
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
          >
            <div
              class="rounded-[100px] [font-size:calc(var(--size,24px)/3)] font-[535] text-center flex items-center justify-center relative"
              style="--size: 36px; color: rgb(255, 191, 23); background-color: rgb(255, 252, 242); height: 36px; line-height: 36px; width: 36px;"
            >
              DAI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          To
        </span>
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          <div
            class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[0] w-[100%] overflow-hidden"
            >
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] h-[0px] overflow-hidden"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[1] overflow-hidden"
                />
              </div>
              <div
                class="flex basis-auto box-border relative min-h-[0px] flex-row shrink items-center gap-[4px] w-[100%] min-w-[0px] overflow-hidden"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
                  style="--c-lh: 44px; font-size: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
                >
                  hayden.eth
                </span>
              </div>
            </div>
          </div>
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          0x9984...9103
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[36px] h-[36px] border-transparent border-[0px] rounded-[999999px] relative"
          data-testid="account-icon"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] grow shrink items-center justify-center opacity-[0] [transition:var(--c-t)]"
            style="--c-t: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          >
            <span
              data-testid="unicon"
            >
              🔵
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px;"
  />
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[12px] w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
    >
      Network cost
    </span>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px] w-[min-content]"
    >
      <img
        alt="Ethereum logo"
        aria-labelledby="titleID"
        height="16px"
        src="ethereum-logo.png"
        style="border-radius: 4px;"
        width="16px"
      />
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        -
      </span>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 self-stretch gap-[16px]"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-accent1 hover:bg-accent1-hovered active:bg-accent1-hovered focus-visible:bg-accent1-hovered focus-visible:outline-accent1-hovered"
        dd-action-name="Confirm send"
        type="button"
      >
        <span
          class="text-center font-medium [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[18px] leading-[20.7px] text-white max-w-full overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Confirm send
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SendReviewModal > should render input in token amount correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px] w-[100%]"
  data-testid="send-review-modal"
>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] px-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          1.00 DAI
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          $100.00
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
          >
            <div
              class="rounded-[100px] [font-size:calc(var(--size,24px)/3)] font-[535] text-center flex items-center justify-center relative"
              style="--size: 36px; color: rgb(255, 191, 23); background-color: rgb(255, 252, 242); height: 36px; line-height: 36px; width: 36px;"
            >
              DAI
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          To
        </span>
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          <div
            class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[0] w-[100%] overflow-hidden"
            >
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] h-[0px] overflow-hidden"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[1] overflow-hidden"
                />
              </div>
              <div
                class="flex basis-auto box-border relative min-h-[0px] flex-row shrink items-center gap-[4px] w-[100%] min-w-[0px] overflow-hidden"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
                  style="--c-lh: 44px; font-size: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
                >
                  hayden.eth
                </span>
              </div>
            </div>
          </div>
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          0x9984...9103
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[36px] h-[36px] border-transparent border-[0px] rounded-[999999px] relative"
          data-testid="account-icon"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] grow shrink items-center justify-center opacity-[0] [transition:var(--c-t)]"
            style="--c-t: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          >
            <span
              data-testid="unicon"
            >
              🔵
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px;"
  />
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[12px] w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
    >
      Network cost
    </span>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px] w-[min-content]"
    >
      <img
        alt="Ethereum logo"
        aria-labelledby="titleID"
        height="16px"
        src="ethereum-logo.png"
        style="border-radius: 4px;"
        width="16px"
      />
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        -
      </span>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 self-stretch gap-[16px]"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-accent1 hover:bg-accent1-hovered active:bg-accent1-hovered focus-visible:bg-accent1-hovered focus-visible:outline-accent1-hovered"
        dd-action-name="Confirm send"
        type="button"
      >
        <span
          class="text-center font-medium [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[18px] leading-[20.7px] text-white max-w-full overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Confirm send
        </span>
      </button>
    </div>
  </div>
</div>
`;
